// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<div
  class="MuiFormControl-root-1 sc-bdVaJa faWPZi"
>
  <div
    class="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid="false"
      class="MuiInput-input-13"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders with adornment start 1`] = `
<div
  class="MuiFormControl-root-62 sc-bdVaJa faWPZi"
>
  <div
    class="MuiInput-root-66 MuiInput-formControl-67 MuiInput-underline-70"
  >
    <div
      class="MuiInputAdornment-root-79 MuiInputAdornment-positionStart-80"
    >
      <svg
        aria-hidden="true"
        data-prefix="fal"
        data-icon="search"
        class="svg-inline--fa fa-search fa-w-16 "
        role="img"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 512 512"
      >
        <path
          fill="currentColor"
          d="M508.5 481.6l-129-129c-2.3-2.3-5.3-3.5-8.5-3.5h-10.3C395 312 416 262.5 416 208 416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c54.5 0 104-21 141.1-55.2V371c0 3.2 1.3 6.2 3.5 8.5l129 129c4.7 4.7 12.3 4.7 17 0l9.9-9.9c4.7-4.7 4.7-12.3 0-17zM208 384c-97.3 0-176-78.7-176-176S110.7 32 208 32s176 78.7 176 176-78.7 176-176 176z"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      class="MuiInput-input-74"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders with label 1`] = `
<div
  class="MuiFormControl-root-35 sc-bdVaJa faWPZi"
>
  <label
    class="MuiFormLabel-root-44 MuiInputLabel-root-39 MuiInputLabel-formControl-40 MuiInputLabel-animated-43"
    data-shrink="false"
  >
    label
  </label>
  <div
    class="MuiInput-root-49 MuiInput-formControl-50 MuiInput-underline-53"
  >
    <input
      aria-invalid="false"
      class="MuiInput-input-57"
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`renders with placeholder 1`] = `
<div
  class="MuiFormControl-root-18 sc-bdVaJa faWPZi"
>
  <div
    class="MuiInput-root-22 MuiInput-formControl-23 MuiInput-underline-26"
  >
    <input
      aria-invalid="false"
      class="MuiInput-input-30"
      placeholder="placeholder"
      type="text"
      value=""
    />
  </div>
</div>
`;
